--- a/test/input/config.yaml
+++ b/test/input/config.yaml
@@ -10,4 +10,8 @@ router:
     routes:
       - class: DhEasy::Router::Test::SeederA
       - class: DhEasy::Router::Test::SeederB
+  finisher:
+    routes:
+      - class: DhEasy::Router::Test::FinisherA
+      - class: DhEasy::Router::Test::FinisherB
 bbb: 222
